<resources>
    <string name="app_name">Royal Truss - Admin</string>
    <string name="input_email">Masukan Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="email_password_null">Email atau Password tidak boleh kosong</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="error_user_not_found">Email atau Password salah</string>
    <string name="error_wrong_password">Password yang anda masukan salah</string>
    <string name="request_error">Terjadi kesalahan, silakan coba lagi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cash_bank">Kas dan Bank</string>
    <string name="title_transaction">Transaksi</string>
    <string name="title_report">Laporan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_report">Laporan</string>
    <string name="title_activity_tab_fragment">TabFragment</string>
    <string name="tab_home_text_1">Daftar Kasir</string>
    <string name="tab_home_text_2">Daftar Pelanggan</string>
    <string name="tab_home_text_3">Daftar Pemasok</string>
    <string name="tab_home_text_4">Persediaan Barang</string>
    <string name="logout_menu">Logout</string>
    <string name="tab_cash_text_1">Penerimaan</string>
    <string name="tab_cash_text_2">Pembayaran</string>
    <string name="request_logout">Logout berhasil</string>
    <string name="tab_transaction_text_1">Penjualan</string>
    <string name="tab_transaction_text_2">Pembelian</string>
    <string name="tab_report_text_1">Penjualan</string>
    <string name="tab_report_text_2">Pembelian</string>
    <string name="tab_report_text_3">Penerimaan Uang</string>
    <string name="tab_report_text_4">Pengeluaran Uang</string>
    <string name="btn_add">Tambahkan</string>
    <string name="btn_cancel">Kembali</string>
    <string name="input_username">Username</string>
    <string name="layout_product">Nama Produk</string>
    <string name="tv_stock">0</string>
    <string name="btn_min">-</string>
    <string name="btn_plus">+</string>
    <string name="zero">0</string>
    <string name="tv_discount">Diskon</string>
    <string name="tv_percent">%</string>
    <string name="tv_rp">Rp. </string>
    <string name="tv_username">Username:</string>
    <string name="tv_password">Password:</string>
    <string name="delete_menu">Hapus</string>
    <string name="edit_menu">Edit</string>
    <string name="tv_not_account_list">Belum ada pengguna yang terdaftar</string>
    <string name="tv_product_name">Product Name</string>
    <string name="tv_price">Rp. 1.000.000</string>
    <string name="tv_stock_value">Stok: 0</string>
    <string name="tv_not_product_list">Belum ada produk yang terdaftar</string>
    <string name="tv_not_customer_list">Belum ada pelanggan yang terdaftar</string>
    <string name="customer_name">Nama:</string>
    <string name="tv_phone">Nomor Telepon:</string>
    <string name="tv_datetime">Tanggal Pembelian:</string>
    <string name="total_harga">Total Harga</string>
    <string name="nodata">..........</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="btn_edit">Edit</string>
    <string name="discount">0%</string>
    <string name="tv_not_supplier">Belum ada pemasok</string>
    <string name="tv_supplier_name">Nama Pemasok:</string>
    <string name="tv_supplier_phone">Tlp Pemasok:</string>
    <string name="tv_total_stock">Jumlah: 0</string>
    <string name="tv_date">Tanggal</string>
    <string name="no_purchase">Belum ada pembelian</string>
    <string name="no_sales">Belum ada penjualan</string>
    <string name="tv_information">Keterangan</string>
    <string name="no_reception">Belum ada data penerimaan</string>
    <string name="no_payment">Belum ada pembayaran</string>
    <string name="layout_information">Keterangan</string>
    <string name="cost_price">Nominal</string>
</resources>