<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:text="@string/btn_add"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/btn_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_plus"
        app:layout_constraintTop_toBottomOf="@+id/input_price"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_product"
        android:layout_width="0dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_image" />

    <EditText
        android:id="@+id/input_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/layout_product"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_product"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/input_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_discount"
        app:layout_constraintStart_toEndOf="@+id/tv_rp"
        app:layout_constraintTop_toBottomOf="@+id/input_product"
        tools:ignore="LabelFor" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#D32F2F"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/img_product"
        app:layout_constraintEnd_toEndOf="@+id/img_product"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_add_image"
        app:tint="@color/colorWhite"
        tools:ignore="ContentDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_plus"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add"
        app:layout_constraintStart_toEndOf="@+id/tv_stock_value"
        app:layout_constraintTop_toTopOf="@+id/btn_add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_min"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:enabled="false"
        android:text="@string/btn_min"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_plus" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_stock_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_stock"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_plus"
        app:layout_constraintStart_toEndOf="@+id/btn_min"
        app:layout_constraintTop_toTopOf="@+id/btn_plus" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/tv_discount"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_discount"
        app:layout_constraintEnd_toStartOf="@+id/input_discount"
        app:layout_constraintTop_toTopOf="@+id/input_discount" />

    <EditText
        android:id="@+id/input_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/zero"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_price"
        app:layout_constraintEnd_toStartOf="@+id/tv_percent"
        app:layout_constraintTop_toTopOf="@+id/input_price"
        tools:ignore="LabelFor" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_percent"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_discount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_discount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_rp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_rp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_price" />

</androidx.constraintlayout.widget.ConstraintLayout>